Intro section, background correction and alignments

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #080120;
+    --primary-color: #030753;
     --secondary-color: crimson;
     --white-color: #FFFFFF;
     --light-gray-color: #EEEEEE;
